--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 </head>
 <body>
   <div id="container"></div>
-  
+  <div class="buttons">
+    <button onclick="changeColor('black')">Black</button>
+    <button onclick="changeColor('blue')">Blue</button>
+    <button onclick="changeColor('green')">Green</button>
+    <button onclick="changeColor('red')">Red</button>
+    <button onclick="changeColor('yellow')">Yellow</button>
+    <button onclick="clearBoard()">Reset</button>
+  </div>
+
+  <input type="text" id="input" onchange="changeSize(this.value)">
+  <button>Resize</button>
   <script src="script.js"></script>
 </body>
 </html>
