draft one complete

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <button onclick="clearBoard()">Reset</button>
   </div>
 
-  <input type="text" id="input" onchange="changeSize(this.value)">
+  <input type="text" id="input" onchange="changeSize(this.value)" placeholder="Enter between 2-100">
   <button>Resize</button>
   <script src="script.js"></script>
 </body>
